argocd/waiter/bacchus-vpn/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bacchus-vpn
spec:
  serviceName: bacchus-vpn-headless
  volumeClaimTemplates:
    - metadata:
        name: bacchus-vpn-data
      spec:
        accessModes:
          - ReadWriteOncePod
        resources:
          requests:
            storage: 1Gi
  template:
    spec:
      containers:
        - name: app
          image: wg-access-server # replaced by kustomize
          ports:
            - name: http
              containerPort: 8000
            - protocol: UDP
              containerPort: 51820
          volumeMounts:
            - name: tun
              mountPath: /dev/net/tun
            - name: config
              subPath: config.yaml
              mountPath: /config.yaml
              readOnly: true
            - name: bacchus-vpn-data
              mountPath: /data
          readinessProbe:
            httpGet:
              port: http
              path: /health
          livenessProbe:
            httpGet:
              port: http
              path: /health
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 100m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - NET_ADMIN
              drop:
                - ALL
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
      serviceAccountName: bacchus-vpn
      volumes:
        - name: tun
          hostPath:
            path: /dev/net/tun
            type: CharDevice
        - name: config
          secret:
            secretName: bacchus-vpn-config
