argocd/waiter/bacchus-vpn/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bacchus-vpn-headless
spec:
  clusterIP: None
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: bacchus-vpn-ui
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: bacchus-vpn
  annotations:
    lbipam.cilium.io/ips: 10.89.0.31
spec:
  type: LoadBalancer
  ports:
    - name: wireguard
      protocol: UDP
      port: 51820
      targetPort: 51820
